<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:background="@color/gameBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tom.memorygamecustom.activities.ChooseLevelActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:text="@string/choose_game_level"
    android:gravity="center"
    android:textSize="40sp"
    android:textColor="@color/white"
    />
    <LinearLayout

    android:layout_width="150dp"
    android:layout_height="350dp"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:weightSum="3"
    android:padding="10dp">
    <Button
        android:text="@string/easy"
        style="@style/choosinglevelButtons"
        android:tag="6"/>
    <Button
        android:text="@string/medium"
        style="@style/choosinglevelButtons"
        android:tag="8"/>
    <Button
        style="@style/choosinglevelButtons"
        android:tag="12"
        android:text="@string/hard"
        android:layout_weight="1"/>

</LinearLayout>

</RelativeLayout>
