<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ><TextView
    android:id="@+id/headline"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/search_images_from_web"
    android:textSize="30sp"
    android:textAlignment="center"
    android:layout_centerInParent="true"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
    android:paddingRight="20dp" />
    <EditText
        android:id="@+id/input"
        android:layout_below="@+id/headline"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_image_name_for_search"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/search"
    android:layout_below="@+id/input"
    android:layout_centerHorizontal="true"
    android:onClick="sendQ"/>
</RelativeLayout>
